[project]
name = "nyt-daily-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriella Melki",email = "gabriellamelki@gmail.com"}
]
requires-python = ">=3.14"
package-mode = false
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
